--- a/pages/projects/allProjects.html
+++ b/pages/projects/allProjects.html
@@ -2,17 +2,20 @@
 <script>
 
     // تهيئة الجدول
-
+ 
     let tt = new setTableParameter(
         'table2',        // ID of the container element
         'allProjectes',         // Table ID and database name
         'RawTable',      // ID of the row template to copy
         'RawAltTable',   // ID of alternate row to show on click
-        true,            // Show table header?
-        true,            // Add alternate div when row is clicked?
+        false,            // Show table header?
+        false,            // Add alternate div when row is clicked?
         true             // Start with new row?
     );
-
+    async function initAllProjectPage ()
+    {
+await tt.getAllRowsDataOnly();
+    }
     // مستمع الحدث
     document.addEventListener( 'tableDataChanged', ( event ) =>
     {
@@ -26,6 +29,15 @@
         console.log( `📢 تم الضغط علي ${ data }` );
     } );
 
+    document.addEventListener( 'selectRow', ( event ) =>
+    {
+        const data = event.detail.kind;
+        console.log( `📢 تم اختيار الصف ${ data }` );
+        localStorage.setItem('selectedProject', data.replace('_', ''));
+        const nav_ = document.getElementById("nav2");
+        nav_.style.display="";
+    } );
+
 </script>
 
 <div id="table2"></div> <!-- مكان إضافة الجدول -->
@@ -36,38 +48,19 @@
             <tr>
                 <th>العمود 1</th>
                 <th>العمود 2</th>
-                <th>العمود 3</th>
-                <th>العمود 4</th>
-                <th>العمود 5</th>
-                <th>العمود 6</th>
+
             </tr>
         </thead>
         <tbody>
             <tr>
                 <td>
-                    <input id="i1" class="inputT" type="text" placeholder="  ادخال من داخل الدف">
+                    <img id="i_new_mo_" alt="Home" style="width:20px; height:20px; vertical-align:middle; margin-left:5px;">
                 </td>
                 <td>
-                    <input id="i2" class="inputT" type="radio" placeholder="  ادخال من داخل الدف">
+                    <input id="projectName" class="inputT" type="text" placeholder="" readonly>
                 </td>
-                <td>
-                    <input id="i3" class="inputT" type="checkbox" placeholder="  ادخال من داخل الدف">
-                </td>
-                <td>
-                    <input id="i4" class="inputT" type="date" placeholder="  ادخال من داخل الدف">
-                </td>
-                <td>
-                    <select name="colors" id="color-select">
-                        <option value="">--Please choose an option--</option>
-                        <option value="red">Red</option>
-                        <option value="green">Green</option>
-                        <option value="blue">Blue</option>
-                        <option value="yellow">Yellow</option>
-                    </select>
-                </td>
-                <td>
-                    <button id="i5" class="buttonT">buttom</button>
-                </td>
+               
+           
             </tr>
 
         </tbody>
@@ -75,7 +68,13 @@
 </div>
 
 <div DivId id="RawAltTable" style="display: none;" class="divT">
-    <button id="b1" class="buttonT">زر</button>
+    <button type="button" id="t_138" class="buttonT">زر</button>
 
 </div>
 
+<script>
+ const input = document.getElementById("projectName");
+  if (input) {
+    input.placeholder = getLang(269); // ✅ غيّر النص حسب رغبتك
+  }
+</script>
