--- a/pages/projects/allProjects.html
+++ b/pages/projects/allProjects.html
@@ -57,7 +57,7 @@ await tt.getAllRowsDataOnly();
                     <img id="i_new_mo_" alt="Home" style="width:20px; height:20px; vertical-align:middle; margin-left:5px;">
                 </td>
                 <td>
-                    <input id="projectName" class="inputT" type="text" placeholder="" readonly>
+                    <input id="projectName" type="text" placeholder="" readonly style="border: none; background-color: transparent; color: black;" >
                 </td>
                
            
